continuous demo and refactor Gatling java inverstors to Locust python investors